--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "description": "",
   "scripts": {
-    "test": "embark test",
-    "start": "embark run --nodashboard"
+    "test": "embark test --node http://localhost:8546",
+    "start": "embark reset && embark run development --nodashboard"
   },
   "keywords": [],
   "author": "",
@@ -27,13 +27,15 @@
     "embarkjs-whisper": "^6.0.0"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^2.5.0",
+    "@chainlink/contracts": "^0.1.7",
+    "@openzeppelin/contracts": "^4.1.0",
     "@openzeppelin/contracts-ethereum-package": "^2.5.0",
     "@openzeppelin/upgrades": "^2.8.0",
     "axios": "^0.21.0",
     "bignumber.js": "^9.0.1",
     "bs-stepper": "^1.7.0",
     "cross-env": "^7.0.3",
+    "ether-converter": "^0.0.13",
     "file-saver": "^2.0.5",
     "jquery": "^3.5.1",
     "js-loading-overlay": "^1.2.0",
@@ -44,6 +46,6 @@
     "sweetalert2": "^10.12.4",
     "tiny-timer": "^1.5.1",
     "web3": "^1.3.5",
-    "web3-utils": "^1.3.0"
+    "web3-utils": "^1.3.6"
   }
 }
